--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
+Base de datos.docx
+Capas.jpg
