--- a/BusinessFlus/BusinessFlus.csproj
+++ b/BusinessFlus/BusinessFlus.csproj
@@ -41,7 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BankAccountBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransactionBL.cs" />
+    <Compile Include="UsersBL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataFlus\DataFlus.csproj">
