--- a/DataFlus/DataFlus.csproj
+++ b/DataFlus/DataFlus.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BankAccountDT.cs" />
     <Compile Include="ModelFlusBank.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -61,6 +62,9 @@
       <DependentUpon>ModelFlusBank.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransactionDT.cs" />
+    <Compile Include="UsersDT.cs" />
+    <Compile Include="Utilities\Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="ModelFlusBank.edmx">
