--- a/FlusBankWeb/FlusBankWeb.csproj
+++ b/FlusBankWeb/FlusBankWeb.csproj
@@ -248,6 +248,9 @@
     <Content Include="Views\Transaction\Index.cshtml" />
     <Content Include="Views\BankAccount\Index.cshtml" />
     <Content Include="Views\BankAccount\Create.cshtml" />
+    <Content Include="Views\BankAccount\Edit.cshtml" />
+    <Content Include="Views\BankAccount\Details.cshtml" />
+    <Content Include="Views\BankAccount\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
