--- a/BusinessFlus/BusinessFlus.csproj
+++ b/BusinessFlus/BusinessFlus.csproj
@@ -42,8 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BankAccountBL.cs" />
+    <Compile Include="BanksOperationsBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TransactionBL.cs" />
     <Compile Include="UsersBL.cs" />
   </ItemGroup>
   <ItemGroup>
