--- a/DataFlus/DataFlus.csproj
+++ b/DataFlus/DataFlus.csproj
@@ -51,6 +51,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BankAccountDT.cs" />
+    <Compile Include="BanksOperationsDT.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ModelFlusBank.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -62,7 +64,6 @@
       <DependentUpon>ModelFlusBank.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TransactionDT.cs" />
     <Compile Include="UsersDT.cs" />
     <Compile Include="Utilities\Utilities.cs" />
   </ItemGroup>
