--- a/BusinessFlus/BusinessFlus.csproj
+++ b/BusinessFlus/BusinessFlus.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BankAccountBL.cs" />
     <Compile Include="BanksOperationsBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransactionsBL.cs" />
     <Compile Include="UsersBL.cs" />
   </ItemGroup>
   <ItemGroup>
