--- a/DataFlus/DataFlus.csproj
+++ b/DataFlus/DataFlus.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>FlusContext.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransactionsDT.cs" />
     <Compile Include="UsersDT.cs" />
     <Compile Include="Utilities\Utilities.cs" />
   </ItemGroup>
