Add login as only entry view and initialized session when the user has logged

--- a/DataFlus/DataFlus.csproj
+++ b/DataFlus/DataFlus.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccessDT.cs" />
     <Compile Include="BankAccountDT.cs" />
     <Compile Include="BanksOperationsDT.cs" />
     <Compile Include="FlusContext.Context.cs">
