--- a/BusinessFlus/BusinessFlus.csproj
+++ b/BusinessFlus/BusinessFlus.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccessBL.cs" />
     <Compile Include="BankAccountBL.cs" />
     <Compile Include="BanksOperationsBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
