--- a/DataFlus/DataFlus.csproj
+++ b/DataFlus/DataFlus.csproj
@@ -65,7 +65,9 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransactionsDT.cs" />
+    <Compile Include="TransactionsSearchedDT.cs" />
     <Compile Include="UsersDT.cs" />
+    <Compile Include="Utilities\SentencesDT.cs" />
     <Compile Include="Utilities\Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
